--- a/Tema 14/holaMundoAngular/src/app/components/listado-personas/listado-personas.component.html
+++ b/Tema 14/holaMundoAngular/src/app/components/listado-personas/listado-personas.component.html
@@ -2,8 +2,20 @@
 <ul class="heroes">
   <li >
     <button  type="button">
-      <span class="badge"></span>
-      <span class="name"></span>
+      <span class="badge">1</span>
+      <span class="name">Batman</span>
+    </button>
+  </li>
+  <li >
+    <button  type="button">
+      <span class="badge">2</span>
+      <span class="name">Spiderman</span>
+    </button>
+  </li>
+  <li >
+    <button  type="button">
+      <span class="badge">3</span>
+      <span class="name">Superman</span>
     </button>
   </li>
 </ul>
