--- a/Tema 14/holaMundoAngular/src/app/components/formulario-personas/formulario-personas.component.html
+++ b/Tema 14/holaMundoAngular/src/app/components/formulario-personas/formulario-personas.component.html
@@ -7,3 +7,5 @@
     <br>
     <input type="button" id="btnEnviar" value="Enviar"/>
 </form>
+<br>
+<button [routerLink]="''">Cerrar formulario</button>
