hay que hacer el ejercicio 2ç

--- a/Tema 14/holaMundoAngular/src/app/app.component.html
+++ b/Tema 14/holaMundoAngular/src/app/app.component.html
@@ -9,7 +9,10 @@
 <button (click)="abrirFormulario()">Abrir eventoclick</button>
 
 
+<br>
+<br>
 
+<app-formulario-reactivo></app-formulario-reactivo>
 
 <!--Esto no se quita sino palo por mamahuevo-->
 <router-outlet></router-outlet>
