--- a/Tema 14/holaMundoAngular/src/app/components/formulario-reactivo/formulario-reactivo.component.html
+++ b/Tema 14/holaMundoAngular/src/app/components/formulario-reactivo/formulario-reactivo.component.html
@@ -1,1 +1,21 @@
-<p>formulario-reactivo works!</p>
+<form [formGroup]="formulario">
+
+    <p>
+    
+    <span>Nombre:</span>
+    
+    <input type="text" id="nombre" formControlName="nombre"/>
+    
+    </p>
+    
+    <p>
+    
+    <span>Apellidos:</span>
+    
+    <input type="text" formControlName="apellidos"/>
+    
+    </p>
+    
+    <button type="button" (click)="saluda()">Saludar</button>
+    
+    </form>
